assets/scss/common/_custom.scss
// Put your custom SCSS code here

.hover-scale {
  transition: transform 0.2s;
}

.hover-scale:hover {
  transform: scale(1.05);
}

.hover-scale-sm {
  transition: transform 0.2s;
}

.hover-scale-sm:hover {
  transform: scale(1.02);
}

div.pad-img > img {
  padding: 0.5rem;
}

img {
  max-width: 100%;
  height: auto;
  display: block;
  margin-bottom: 1rem;
}

img.emote {
    display: inline;
    width: 1.55rem;
    height: auto;
    margin-bottom: 0.15rem;
}

img.smallemote {
    display: inline;
    height: 1.35rem;
    width: auto;
    margin-left: 2px;
    margin-bottom: 0.15rem;
}

img.largeemote {
    display: inline;
    width: 2.15rem;
    height: auto;
}

img.headingemote {
    display: inline-flex;
    height: 4rem;
    width: auto;
    vertical-align: middle;
    margin-bottom: 0rem;
}

h2 img.headingemote {
    height: 3rem;
}

.latest-guide-item h2 img.headingemote {
    height: 3rem;
    vertical-align: sub;
    margin: -3rem auto 0 auto;
    transform: translateY(0.5rem);
}

h4 img.headingemote {
    height: 2rem;
    transform: translateY(-0.05rem);
}

.new-badge {
  display: none;
}

.justify-content-inherit {
    text-align: inherit;
    justify-content: inherit;
}

.audio-card audio {
  max-width: 100%;
}

table {
  width: 100%;
  margin-top: 1rem;
  margin-bottom: 2rem;
}

table td, table th {
  padding: 8px 16px;
  border: 1px solid #eee;
}

